--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "axios": "^0.19.1",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "uniqid": "^5.2.0"
   }
 }
